--- a/TareaPDT_JSF/WebContent/resources/css/styleusuario.css
+++ b/TareaPDT_JSF/WebContent/resources/css/styleusuario.css
@@ -27,14 +27,19 @@
 #footer {
 	border-top: 4px solid #FF8F00;
 	background-color: #101010;
-	margin-top: 40px;
+	margin-top: 0px;
 	color: #EEEEEE;
 	padding: 40px 0 40px 0;
 	font-size: 16px;
+	width: 100%;
 	bottom:0px;
-	width:100%;
+
 	
-	
+}
+html
+{
+  min-height: 100%;
+  position: relative;
 }
 
 #footer-logo {
