--- a/TareaPDT_JSF/WebContent/resources/css/bajausuario.css
+++ b/TareaPDT_JSF/WebContent/resources/css/bajausuario.css
@@ -4,7 +4,7 @@
 #footer {
 	border-top: 4px solid #FF8F00;
 	background-color: #101010;
-	margin-top: 50px;
+	margin-top: 40px;
 	color: #EEEEEE;
 	padding: 40px 0 40px 0;
 	font-size: 16px;
@@ -16,7 +16,7 @@
 }
 html
 {
-  height: 100%;
+  height: auto;
   position: relative;
 }
 
@@ -36,14 +36,12 @@ html
 	list-style: none;
 	margin-bottom: 6px;
 	
-	
 }
 
 #footer ul li a,
 #footer ul li a:visited {
 	color: #EEEEEE;
 	width: 100vw;
-	
 }
 
 
