--- a/TareaPDT_JSF/WebContent/resources/css/style.css
+++ b/TareaPDT_JSF/WebContent/resources/css/style.css
@@ -82,3 +82,23 @@ h1, h2, h3, h4, h5, h6 {
 {
 margin-top: 100px;
 }
+
+
+#sobrenosotros {
+	padding: 30px 0;
+}
+
+#sobrenosotros h1 {
+	margin-top: 0;
+}
+
+#sobrenosotros h2 span {
+	font-weight: 300;
+}
+
+#sobrenosotros #company-photo {
+	border: 1px solid #DDD;
+	padding: 5px;
+}
+
+
